# gpr

./: .gitignore  CMakeLists.txt
include/: GPFitNewton.h  GPOptimizer.h  GausProc.h  GausProcLinkDef.h  Pincushion.h  SeamSplitter.h  Seamstress.h  SewingLine.h
macros/: example1.C  example2.C  example3.C  gp.C
src/: GPFitNewton.cpp  GPOptimizer.cpp  GausProc.cpp  NewtonMinimizerGradHessian.cpp  SeamSplitter.cpp  Seamstress.cpp  SewingLine.cpp
